# youtube_node_downloader

./: .env.example  .gitignore  README.md  README.ru.md  TODO.md  alembic.ini  channels_list.json  channels_list.json.example  dockerfile  install.md  install.sh  proxychains.conf  pyproject.toml  requirements.txt  run_docker.sh  run_proxy.sh  run_youtube_worker.sh  stop_app.sh  youtube-monitoring.service
.github/workflows/: docker.yml  release.yml
alembic/: env.py
alembic/versions/: 2024_03_10_0047-e5c52e63bc97_initial.py  2024_03_10_2321-4ec20d78a345_update_video_table.py  2024_03_11_2152-a19c60f3f2bb_add_ytformat_table.py
app/: __main__.py  config.py  const.py  schema.py
app/db/: base.py  data_table.py  repository.py  youtube.sql
app/integrations/: ytapi.py  ytdlp.py
app/service/: telegram.py  utils.py  yt_monitor.py  ytapi.py  ytdlp.py
docs/: .buildinfo  INSTALL.md  app.db.html  app.html  app.integrations.html  app.service.html  docker_install.md  genindex.html  index.html  modules.html  objects.inv  pip_install.md  postgres_install.md  py-modindex.html  search.html  searchindex.js  yt-dlp_install.md  yt_api_install.md
docs/.doctrees/: app.db.doctree  app.doctree  app.integrations.doctree  app.service.doctree  index.doctree  modules.doctree
docs/_modules/: index.html
docs/_modules/app/: config.html  (+1 more)
docs/_sources/: app.integrations.rst.txt  app.rst.txt  app.service.rst.txt  index.rst.txt
migrations/: env.py  merge.py
migrations/versions/: 2024_03_10_0047-e5c52e63bc97_initial.py  (+3 more)
sphinx/: app.db.rst  conf.py
templates/: new_video.md  shorts.md
(+10 files in other folders)
