[tool.isort]
line_length = 120

[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry]
name = "app"
version = "0.1.0"
description = "Youtube news feed in Telegram channel"
authors = ["Dubadunh <sergey.maloywin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "~2.121.0"
google-auth-oauthlib = "1.2.0"
google-auth-httplib2 = "~0.2.0"
httplib2 = "~0.22.0"
httpx = "~0.27.0"
loguru = "~0.7.2"
oauth2client = "~4.1.3"
pydantic = "~2.6.4"
pydantic-settings = "~2.2.1"
python-dateutil = "~2.8.2"
isodate = "~0.7.2"
SQLAlchemy = "~2.0.28"
sqlmodel = "~0.0.16"
psycopg2-binary = "2.9.10"
python-telegram-bot = "~21.10"
sshtunnel = "~0.4.0"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.3.0"
